--- a/config.json
+++ b/config.json
@@ -1,5 +1,4 @@
 {
-  
-  "mainprefix": "jj",
-     "token": "Nzg4NjQ5ODM4ODM2NTgwMzg0.X9mlZQ._fucWWt1WgPwzLyXZptv-W3DwBw"
+  "mainprefix": "your_prefix",
+     "token": "your_bot_token"
 }
