--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "//1": "made by ahmed.",
-  "name": "hello-express",
+  "name": "artdbot",
   "version": "1.0.2",
   "description": "newart",
   "main": "index.js",
